2010-10-25  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        cancelledError for WebKit2 on windows should use kCFErrorDomainCFNetwork instead of webKitErrorDomain
        https://bugs.webkit.org/show_bug.cgi?id=48254

        * WebProcess/WebCoreSupport/win/WebErrorsWin.cpp:
        (WebKit::cancelledError): Use kCFErrorDomainCFNetwork instead of webKitErrorDomain and switch over
        to using kCFURLErrorCancelled instead of a hard coded constant.

2010-10-25  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Need WebKit2 API to figure out if a frame can provide source
        <rdar://problem/8424632>
        https://bugs.webkit.org/show_bug.cgi?id=48252

        * UIProcess/API/C/WKFrame.cpp:
        (WKFrameCanProvideSource):
        * UIProcess/API/C/WKFrame.h:
        * UIProcess/WebFrameProxy.cpp:
        (WebKit::WebFrameProxy::canProvideSource):
        * UIProcess/WebFrameProxy.h:
        Add API to figure out if a frame can provide source based on its
        MIME type.

2010-10-25  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Java applets don't display on the page
        https://bugs.webkit.org/show_bug.cgi?id=48251
        <rdar://problem/8483759>

        Add WKPreferencesSetJavaEnabled and initialize it to true by default, matching old WebKit.

        * Shared/WebPreferencesStore.cpp:
        (WebKit::WebPreferencesStore::WebPreferencesStore):
        Initialize javaEnabled.

        (WebKit::WebPreferencesStore::encode):
        Encode javaEnabled.

        (WebKit::WebPreferencesStore::decode):
        Decode javaEnabled.

        * Shared/WebPreferencesStore.h:
        Add javaEnabled.

        * UIProcess/API/C/WKPreferences.cpp:
        (WKPReferencesSetJavaEnabled):
        (WKPReferencesGetJavaEnabled):
        Call the WebPreferences functions.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp: